Fix double scroll bug in FF

--- a/shared/components/pages/ActivationsPage.less
+++ b/shared/components/pages/ActivationsPage.less
@@ -3,6 +3,7 @@
 .ActivationsPage {
     background-color: @background-color;
     min-height: 100vh;
+    overflow: hidden;
     box-sizing: border-box;
     padding-top: 100px;
     display: flex;
